--- a/data/pt/README
+++ b/data/pt/README
@@ -9,8 +9,12 @@
 ## http://gramatica.usc.es/pln		  ##
 ############################################
 
+Adaptação e avaliação:
+http://linguamatica.com/index.php/linguamatica/article/download/56/87
+
 Corpus de treino utilizado:
--Bosque 8.0 da Linguateca (http://www.linguateca.pt/Floresta/corpus.html#bosque): parte da Floresta Sintá(c)tica etiquetada manualmente.
+-Bosque 8.0 da Linguateca (http://www.linguateca.pt/Floresta/corpus.html#bosque):
+ parte da Floresta Sintá(c)tica etiquetada manualmente.
 -Aprox. 9300 frases e 138000 tokens.
 -Adaptado para o formato requerido pelo Freeling.
 -Mudanças para adaptá-lo ao dicionário (lemas e categorias) e correcções.
@@ -23,13 +27,10 @@ Dicionário utilizado:
 
 Propriedades:
 -Tagset: adaptação do Parole.
--Enquanto os verbos com pronomes mesoclíticos são lematizados com a forma normal do verbo: comê-lo-ão > comerão + o, com pronome clítico são lematizados pelo alomorfe: fazê-lo > fazê (VMN) + o.
+-Enquanto os verbos com pronomes mesoclíticos são lematizados com a forma normal do verbo:
+ comê-lo-ão > comerão + o, com pronome clítico são lematizados pelo alomorfe: fazê-lo > fazê (VMN) + o.
 -Locuções extraídas automaticamente do corpus.
 -O dicionário não contém palavras compostas (com traço), nem expressões multipalavra (só as extraídas automaticamente em locucions.dat).
--Avaliação:
-  -Corpus de treino: aprox. 87000 tokens.
-  -Corpus de teste: aprox.  51000 tokens.
-  -Parâmetros de execução: --force tagger --noloc --nodate --noquant.
-  -Resultados (entre parênteses, sem contabilizar os erros de tokenização):
-    -TagCompleto: 92.817% (94.110%)
-    -SingleTags: 94.738% (96.058%)
+
+
+
